<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".EditEvent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            app:navigationIcon="@drawable/back_arrow"
            app:title="@string/txtEditEvento"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/appBarHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome do evento" />

            <EditText
                android:id="@+id/editTextEventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpNameEvent"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome do local " />

            <EditText
                android:id="@+id/editTextLocalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpLocalEvent"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:id="@+id/textViewCityState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cidade e estado" />

            <EditText
                android:id="@+id/editTextCityState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpCity_State"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Número da rua" />

            <EditText
                android:id="@+id/editTextEventStreetNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Insira o número da rua"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dia do evento" />

            <EditText
                android:id="@+id/editTextEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpDateEvent"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora do evento" />

            <EditText
                android:id="@+id/editTextHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpHourEvent"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descrição do evento" />

            <EditText
                android:id="@+id/editTextEventDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpSynopsisEvent"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Imagem do evento (URL)" />

            <EditText
                android:id="@+id/editTextEventImageUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Insira o URL da imagem"
                style="@style/inputAddEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <Button
                android:id="@+id/buttonAddEvent"
                style="@style/buttonLg"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Atualizar" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
