<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentCreateEvent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue3"
            app:title="@string/txtAddEvent"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarHeader"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible">

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome do evento" />

            <EditText
                android:id="@+id/editTextEventName"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpNameEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nome do local " />

            <EditText
                android:id="@+id/editTextLocalName"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpLocalEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textViewCityState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cidade e estado" />

            <EditText
                android:id="@+id/editTextCityState"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpCity_State" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Número da rua" />

            <EditText
                android:id="@+id/editTextEventStreetNumber"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Insira o número da rua" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dia do evento" />

            <EditText
                android:id="@+id/editTextEventDate"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpDateEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hora do evento" />

            <EditText
                android:id="@+id/editTextHour"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpHourEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descrição do evento" />

            <EditText
                android:id="@+id/editTextEventDescription"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtExpSynopsisEvent" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Imagem do evento (URL)" />

            <EditText
                android:id="@+id/editTextEventImageUrl"
                style="@style/inputAddEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Insira o URL da imagem" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/buttonAddEvent"
                style="@style/buttonLg"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Criar evento" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>